# game-chronicle-app

./: .env  .gitignore  README.md  app.go  app_test.go  bun.lockb  database.go  database_test.go  go.mod  go.sum  igdb.go  igdb_test.go  logs.db  logs.go  logs_test.go  main.go  package-lock.json  package.json  package.json.md5  process-monitor.go  process-monitor_test.go  tailwind.config.js  wails.json
.github/workflows/: main.yml
frontend/: bun.lockb  components.json  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs  tailwind.config.js
frontend/src/: App.svelte  app.css  app.html
frontend/src/lib/: schemas.ts
frontend/src/lib/components/: Combobox.svelte  DatePicker.svelte  ErrorMessage.svelte  GameCard.svelte  GameCarousel.svelte  GameLogCard.svelte  GameSearchModal.svelte  GameSelectModal.svelte  GameStatusBadge.svelte  LogModal.svelte  LogsGrid.svelte  Modal.svelte  RatingInput.svelte
frontend/src/lib/components/ui/card/: card-title.svelte
frontend/src/lib/wailsjs/go/: models.ts
frontend/src/lib/wailsjs/go/main/: App.d.ts  App.js  Database.d.ts  Database.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/game-search/: +page.svelte
frontend/src/routes/log/: +page.svelte
frontend/src/routes/logs/: +page.svelte
frontend/src/routes/logs/edit/: +page.svelte
frontend/src/routes/settings/: +page.svelte
scripts/: build-windows.sh
src/: app.css
src-tauri/: Cargo.toml  logs.db  tauri.conf.json
src-tauri/capabilities/: migrated.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/resources/: changelog.md  schema_changes.toml
src-tauri/sql/: initialize_database.sql  initialize_igdb_database.sql
src-tauri/src/: data_import.rs  database.rs  dumps.rs  helpers.rs  igdb.rs  init-db.sql  main.rs  process_monitor.rs
src/lib/: index.ts  schemas.ts  stores.ts  utils.ts
src/lib/components/: Combobox.svelte  DatePicker.svelte  GameCard.svelte  Statistic.svelte
src/lib/components/icons/: StarIcon.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-header.svelte
src/lib/components/ui/button/: index.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/lib/components/ui/tooltip/: tooltip-content.svelte
src/lib/rust-bindings/: data_import.ts  database.ts  dumps.ts  helpers.ts  igdb.ts  main.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/dumps/: +page.svelte
src/routes/game-search/: +page.svelte  +page.ts
src/routes/logs/: +page.svelte  +page.ts
src/routes/logs/[id]/: +page.svelte  +page.ts
src/routes/logs/edit/: +page.svelte  +page.ts
src/routes/onboarding/: +page.svelte
src/routes/onboarding/finished/: +page.svelte
src/routes/onboarding/game-detection/: +page.svelte  +page.ts
src/routes/onboarding/import/steam/: +page.svelte  +page.ts
src/routes/onboarding/twitch/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
src/routes/similar-games/: +page.svelte  +page.ts
src/routes/updater/: +page.svelte  +page.ts
tests/: index.spec.ts
