[package]
name = "game-chronicle"
version = "0.10.0"
description = "A simple gaming journal with automatic game detection"
authors = ["Centric"]
license = ""
repository = "https://github.com/ItsCentric/game-chronicle"
default-run = "game-chronicle"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = ['tray-icon', 'image-png'] }
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = ['bundled'] }
thiserror = "1.0.59"
toml = "0.8.12"
whoami = "1.5.1"
sysinfo = "0.30.11"
walkdir = "2.5.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-updater = "2.0.0-beta"
rand = "0.8.5"
chrono = "0.4.38"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-notification = "2.0.0-beta.8"
tauri-plugin-autostart = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.9"
csv = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
